# SDL3-side-scroller

./: README.md
src/: CMakeLists.txt  Menu.cpp  Menu.h  RPG.cpp  RPG.h  animation.h  gameobject.h  main.cpp  timer.h
